coffee-shop-kustomize/coffee-shop/overlays/production/service-patches.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: prod-coffee-shop
    app.kubernetes.io/instance: prod-coffee-shop
    app.kubernetes.io/part-of: prod-coffee-shop
  name: coffee-shop
